--- a/tickets.html
+++ b/tickets.html
@@ -80,81 +80,115 @@
       </nav>
     </header>
     <main>
-      <form id="ticket-form">
-        <input type="radio" id="free" name="ticket-type" value="free" />
-        <label for="free">Community Science Museum</label>
+      <div class="form-position">
+        <form id="ticket-form">
+          <div class="form-container">
+            <div class="img1">
+              <input type="radio" id="free" name="ticket-type" value="free" />
+              <label for="free" class="ticket-option"
+                >Community Science Museum</label
+              >
+            </div>
+            <div class="img2">
+              <input
+                type="radio"
+                id="exhibition1"
+                name="ticket-type"
+                value="exhibition1"
+              />
+              <label for="exhibition1" class="ticket-option"
+                >Night in the museum</label
+              >
+            </div>
+            <div class="img3">
+              <input
+                type="radio"
+                id="exhibition2"
+                name="ticket-type"
+                value="exhibition2"
+              />
+              <label for="exhibition2" class="ticket-option"
+                >Energetica Exhibition</label
+              >
+            </div>
+            <div class="img4">
+              <input
+                type="radio"
+                id="exhibition3"
+                name="ticket-type"
+                value="exhibition3"
+              />
+              <label for="exhibition3" class="ticket-option"
+                >Professor of Aeronautics</label
+              >
+            </div>
 
-        <input
-          type="radio"
-          id="exhibition1"
-          name="ticket-type"
-          value="exhibition1"
-        />
-        <label for="exhibition1">Night in the museum</label>
+            <div class="link1">
+              <div class="step" id="step-1">
+                <label for="day">Select Day:</label>
+                <select id="day" name="day">
+                  <option value="Tuesday">Tuesday</option>
+                  <option value="Wednesday">Wednesday</option>
+                  <option value="Thursday">Thursday</option>
+                  <option value="Friday">Friday</option>
+                  <option value="Saturday">Saturday</option>
+                  <option value="Sunday">Sunday</option>
+                </select>
+              </div>
+            </div>
 
-        <input
-          type="radio"
-          id="exhibition2"
-          name="ticket-type"
-          value="exhibition2"
-        />
-        <label for="exhibition2">Energetica Exhibition</label>
+            <div class="link2">
+              <div class="step" id="step-2">
+                <label for="time">Select Time:</label>
+                <select id="time" name="time">
+                  <optgroup label="Exhibition 1">
+                    <option value="21:00">21:00</option>
+                  </optgroup>
 
-        <input
-          type="radio"
-          id="exhibition3"
-          name="ticket-type"
-          value="exhibition3"
-        />
-        <label for="exhibition3">Professor of Aeronautics</label>
+                  <optgroup label="Exhibition 2">
+                    <option value="11:00">11:00</option>
+                    <option value="12:00">12:00</option>
+                  </optgroup>
 
-        <div class="step" id="step-1">
-          <label for="day">Select Day:</label>
-          <select id="day" name="day">
-            <option value="Tuesday">Tuesday</option>
-            <option value="Wednesday">Wednesday</option>
-            <option value="Thursday">Thursday</option>
-            <option value="Friday">Friday</option>
-            <option value="Saturday">Saturday</option>
-            <option value="Sunday">Sunday</option>
-          </select>
-        </div>
+                  <optgroup label="Exhibition 3">
+                    <option value="11:00">11:00</option>
+                    <option value="15:00">15:00</option>
+                  </optgroup>
+                </select>
+              </div>
+            </div>
 
-        <div class="step" id="step-2">
-          <label for="time">Select Time:</label>
-          <select id="time" name="time">
-            <optgroup label="Exhibition 1">
-              <option value="21:00">21:00</option>
-            </optgroup>
+            <div class="link3">
+              <div class="step" id="step-3">
+                <label for="ticket-category">Select Ticket Category:</label>
+                <select id="ticket-category" name="ticket-category">
+                  <option value="adult">Adult (150 NOK)</option>
+                  <option value="child">Child (70 NOK)</option>
+                </select>
+              </div>
+            </div>
+            <div class="link4">
+              <label for="quantity">Quantity:</label>
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                required
+              />
+            </div>
 
-            <optgroup label="Exhibition 2">
-              <option value="11:00">11:00</option>
-              <option value="12:00">12:00</option>
-            </optgroup>
-
-            <optgroup label="Exhibition 3">
-              <option value="11:00">11:00</option>
-              <option value="15:00">15:00</option>
-            </optgroup>
-          </select>
-        </div>
-
-        <div class="step" id="step-3">
-          <label for="ticket-category">Select Ticket Category:</label>
-          <select id="ticket-category" name="ticket-category">
-            <option value="adult">Adult (150 NOK)</option>
-            <option value="child">Child (70 NOK)</option>
-          </select>
-          <label for="quantity">Quantity:</label>
-          <input type="number" id="quantity" name="quantity" min="1" required />
-        </div>
-        <div class="step" id="step-4">
-          <a href="checkout.html" class="checkout-button"
-            >Proceed to Checkout</a
-          >
-        </div>
-      </form>
+            <div class="link5">
+              <div class="step" id="step-4">
+                <a href="checkout.html" class="checkout-button"
+                  >Proceed to Checkout</a
+                >
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
     </main>
-    <footer></footer>
+    <footer>v</footer>
   </body>
 </html>
